--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,6 +69,7 @@
     <string name="open_src_libs">Bibliotecas de código abierto</string>
     <string name="photo_credits">Créditos de fotografía</string>
     <string name="privacy_policy">Política de Privacidad</string>
+    <string name="tos">Términos de servicio</string>
     <string name="legal">Legal</string>
     <string name="libs_in_use">Bibliotecas que utilizamos</string>
     <string name="supported_eclipse">Eclipses que apoyamos</string>
@@ -83,7 +84,8 @@
     <string name="past_partners">Colaboradores anteriores</string>
     <string name="our_team">Nuestro equipo</string>
     <string name="feedback">Dar opinión</string>
-    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/pol%C3%ADtica-de-privacidad-de-la-aplicaci%C3%B3n-m%C3%B3vil]]></string>
+    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/pol%C3%ADtica-de-privacidad]]></string>
+    <string name="tos_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/t%C3%A9rminos-de-servicio]]></string>
 
     <string name="libraries_use_detail">A continuación se establecen los avisos de derechos de autor para el software de terceros que puede ser parte de la aplicación móvil Eclipse Soundscapes.
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
