Updates eclipse center countdown view and includes year, month section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="back">Back</string>
     <string name="cancel">Cancel</string>
 
+    <string name="years">Years</string>
+    <string name="months">Months</string>
     <string name="hours">Hours</string>
     <string name="days">Days</string>
     <string name="minutes">Minutes</string>
@@ -81,7 +83,7 @@
     <!-- Eclipse Center -->
     <string name="eclipse_center_lockout_details">Updated Eclipse data coming soon.</string>
     <string name="eclipse_countdown_title">Countdown Until Eclipse</string>
-    <string name="countdown_format">Countdown until eclipse from your location, %1$s days, %2$s hours, %3$s minutes and %4$s seconds</string>
+    <string name="countdown_format">Countdown until eclipse from your location, %1$s years, %2$s months, %3$s days, %4$s hours, %5$s minutes and %6$s seconds</string>
     <string name="event_section_desc">Events at closest location are below. Events include your local time and universal time.</string>
     <string name="event_desc_format">Event from closest location, %1$s, local time, %2$s, universal time, %3$s</string>
     <string name="eclipse_center_permission">You don\'t want to miss this amazing astronomical event! We\'ll need your location to access this feature.\nPress anywhere on the screen to continue.</string>
